[package]
name = "logisheets"
version = "0.5.0"
description = "A web spreadsheets application written in Rust and Typescript"
keywords = ["excel", "spreadsheets", "ooxml", "logisheets", "xlsx"]
readme = "README.md"
repository = "https://github.com/logisky/LogiSheets"
license = "MIT"
include = [
    "crates/workbook/**/*",
    "crates/controller/**/*",
    "src/lib.rs",
    "Cargo.toml",
]
edition = "2018"

[workspace]
members = [
    "crates/buildtools",
    "crates/controller",
    "crates/formatter",
    "crates/logiscript",
    "crates/sequencer",
    "crates/wasms/fc",
    "crates/wasms/server",
    "crates/workbook",
    "crates/xmldiff",
]

[dependencies]
logisheets_controller = {path = "crates/controller", version = "0.5.0"}
logisheets_workbook = {path = "crates/workbook", version = "0.5.0"}

[dev-dependencies]
glob = "0.3.1"
logiscript = {path = "crates/logiscript", version = "0.1.0"}
