[package]
name = "logisheets"
version.workspace = true
description = "A web spreadsheets application written in Rust and Typescript"
keywords = ["excel", "spreadsheets", "ooxml", "logisheets", "xlsx"]
readme = "README.md"
repository = "https://github.com/logisky/LogiSheets"
license.workspace = true
include = [
    "crates/workbook/**/*",
    "crates/controller/**/*",
    "src/lib.rs",
    "Cargo.toml",
]
edition.workspace = true

[workspace]
members = [
    "crates/buildtools",
    "crates/controller",
    "crates/controller/ast_checker",
    "crates/controller/base",
    "crates/controller/lexer",
    "crates/controller/parser",
    "crates/formatter",
    "crates/logiscript",
    "crates/mock-server",
    "crates/sequencer",
    "crates/server-types",
    "crates/wasms/fc",
    "crates/wasms/server",
    "crates/workbook",
    "crates/xmldiff",
]

[workspace.package]
version = "0.7.0"
authors = ["JeremyHe <yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"

[workspace.dependencies]
chrono = "0.4"
futures = "0.3"
gents = "1.0.4"
gents_derives = "1.0.4"
getrandom = "0.2"
imbl = "2.0"
lazy_static = "1.4"
pest = "2.7"
pest_derive = "2.5"
quick-xml = "0.31"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "1.0"
xmlserde = "0.11"
xmlserde_derives = "0.11"
wildescape = "0.1"

logisheets_lexer = { path = "crates/controller/lexer", version = "0.7.0" }
logisheets_parser = { path = "crates/controller/parser", version = "0.7.0" }
logisheets_base = { path = "crates/controller/base", version = "0.7.0" }
logisheets_controller = { path = "crates/controller", version = "0.7.0" }

logisheets_workbook_derives = { path = "crates/workbook/derives", version = "0.7.0" }
xmldiff = { path = "crates/xmldiff", version = "0.7.0" }
logisheets_workbook = { path = "crates/workbook", version = "0.7.0" }

[dependencies]
logisheets_controller = { workspace = true }
logisheets_workbook = { workspace = true }

[dev-dependencies]
glob = "0.3.1"
logiscript = { path = "crates/logiscript" }
