# The root crate is NOT published — the public Rust SDK is `logisheets-rs`
# (crates/api). This package exists only to host the workspace and the
# integration test suite in `tests/` (which `use logisheets::…`), so it keeps a
# minimal `src/lib.rs` re-export. `publish = false` guards against an accidental
# `cargo publish` from the repo root.
[package]
name = "logisheets"
version.workspace = true
description = "A web spreadsheets application written in Rust and Typescript"
license.workspace = true
publish = false
edition.workspace = true

[workspace]
members = [
    "crates/api",
    "crates/buildtools",
    "crates/controller",
    "crates/controller/ast_checker",
    "crates/controller/base",
    "crates/controller/lexer",
    "crates/controller/lexer4fmt",
    "crates/controller/parser",
    "crates/logiscript",
    "crates/sequencer",
    "crates/wasms/server",
    "crates/workbook",
    "crates/xmldiff",
]

[workspace.package]
version = "1.5.0"
authors = ["JeremyHe <yiliang.he@qq.com>"]
license = "MIT"
edition = "2024"

[workspace.dependencies]
chrono = "0.4"
futures = "0.3"
gents = "1.3"
gents_derives = "1.3"
getrandom = "0.2"
imbl = "2.0"
lazy_static = "1.4"
pest = "2.7"
pest_derive = "2.5"
quick-xml = "0.31"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "1.0"
xmlserde = "0.12"
xmlserde_derives = "0.12"
wildescape = "0.1"

logisheets_lexer = { path = "crates/controller/lexer", version = "1.5.0" }
logisheets_parser = { path = "crates/controller/parser", version = "1.5.0" }
logisheets_base = { path = "crates/controller/base", version = "1.5.0" }
logisheets_controller = { path = "crates/controller", version = "1.5.0" }
logisheets_lexer4fmt = { path = "crates/controller/lexer4fmt", version = "1.5.0" }
logisheets_astchecker = { path = "crates/controller/ast_checker", version = "1.5.0" }

logisheets_workbook_derives = { path = "crates/workbook/derives", version = "1.5.0" }
xmldiff = { path = "crates/xmldiff", version = "1.5.0" }
logisheets_workbook = { path = "crates/workbook", version = "1.5.0" }
logisheets-rs = { path = "crates/api", version = "1.5.0" }

[dependencies]
logisheets_controller = { workspace = true }
logisheets_workbook = { workspace = true }

[dev-dependencies]
glob = "0.3.1"
logiscript = { path = "crates/logiscript" }
logisheets_base = { workspace = true }
