[package]
name = "xlrs_controller"
version = "0.1.0"
authors = ["Jiangming He"]
edition = "2018"

[dependencies]
chrono = "0.4.19"
futures = "0.3.19"
im = "15.0.0"
indexmap = "1.6.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
num = "0.4.0"
quick-xml = {version = "0.22.0", features = ["serialize"]}
rand = {version = "0.8.4"}
regex = "1"
serde = {version = "1.0.125", features = ["derive"]}
statrs = "0.15.0"
unicode-segmentation = "1.8.0"

controller_base = {version = "0.1.0", path = "./base"}
formatter = {version = "0.1.0", path = "./formatter"}
lexer = {version = "0.1.0", path = "./lexer"}
logisheets_math = {version = "0.1.1", path = "../math"}
logiutils = {version = "0.1.0", path = "../logiutils"}
parser = {version = "0.1.1", path = "./parser"}
logisheets_workbook = {version = "0.1.0", path = "../workbook"}
