[package]
name = "logisheets_network"
version = "0.1.0"
authors = ["Jiangming He"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-broker = "0.3.1"
actix-files = "0.4"
actix-interop = "0.2.0"
actix-rt = "1"
actix-web = "3"
actix-web-actors = "3"
bytes = "0.5.6"
env_logger = "0.8"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
prost = "0.8"
rand = "0.7"
regex = "1"
reqwest = "0.10.10"
logiutils = {version = "0.1.0", path = "../logiutils"}
xlrs_controller = {version = "0.1.0", path = "../controller"}
xlrs_workbook = {version = "0.1.0", path = "../workbook"}

[build-dependencies]
prost-build = "0.8"
