[package]
name = "logisheets_protocols"
version = "0.1.0"
authors = ["Jiangming He"]
edition = "2018"

[dependencies]
prost = "0.9"
bytes = "1"
serde = {version = "1.0.125", features = ["derive"]}
logiutils = {version = "0.1.0", path = "../logiutils"}
xlrs_controller = {version = "0.1.0", path = "../controller"}
xlrs_workbook = {version = "0.1.0", path = "../workbook"}
logisheets_workbook = {version = "0.1.0", path = "../workbook2"}

[build-dependencies]
prost-build = "0.9"
