[package]
name = "buildtools"
version = "0.1.0"
edition = "2018"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]

[dependencies]
gents = "0.6.0"

logisheets_controller = {path = "../controller", features = ["gents"]}
logisheets_sequencer = {path = "../sequencer", features = ["gents"]}

[[bin]]
name = "generate"
path = "src/generate.rs"
