[package]
name = "buildtools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gents = { workspace = true }

logisheets_controller = { path = "../controller", features = ["gents"] }
logisheets_sequencer = { path = "../sequencer", features = ["gents"] }

[[bin]]
name = "generate"
path = "src/generate.rs"
