[package]
name = "buildtools"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gents = { workspace = true }

logisheets_controller = { path = "../controller" }
logisheets_sequencer = { path = "../sequencer" }
logisheets_server_types = { path = "../server-types" }
logisheets_workbook = { path = "../workbook" }

[[bin]]
name = "generate"
path = "src/generate.rs"
