[package]
name = "logisheets_controller"
version = "0.4.0"
description = "the core of LogiSheets"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
license = "MIT"

[dependencies]
thiserror = "1.0.48"
chrono = "0.4.26"
futures = "0.3.19"
colorsys = "0.6.7"
im = "15.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
num = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2"
quick-xml = {version = "0.28", features = ["serialize"]}
rand = "0.8.4"
regex = "1"
serde = {version = "1.0.152", features = ["derive"]}
statrs = "0.16.0"
unicode-segmentation = "1.10.1"
wildescape = "0.1.0"
uuid ={ version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

logisheets_base = {version = "0.4.0", path = "./base", features = ["gents"]}
logisheets_lexer = {version = "0.4.0", path = "./lexer"}
logisheets_parser = {version = "0.4.0", path = "./parser"}
logisheets_workbook = {version = "0.4.0", path = "../workbook", features = ["gents"]}
logisheets_astchecker = {version = "0.4.0", path = "./ast_checker"}

gents = {version = "0.7.0", optional = true}
gents_derives = {version = "0.7.0", optional = true}

[features]
gents = ["dep:gents", "dep:gents_derives"]
sequencer = []
default = []
