[package]
name = "logisheets_controller"
version.workspace = true
license.workspace = true
authors.workspace = true
description = "the core of LogiSheets"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
futures = "0.3.19"
colorsys = "0.6.7"
im = { workspace = true }
itertools = "0.10.5"
lazy_static = { workspace = true }
num = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2"
quick-xml = { workspace = true, features = ["serialize"] }
rand = "0.8.4"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
statrs = "0.16.1"
unicode-segmentation = "1.10.1"
wildescape = "0.1.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

logisheets_base = { path = "./base", features = ["gents"], version = "0.7.0" }
logisheets_lexer = { path = "./lexer", version = "0.7.0" }
logisheets_parser = { path = "./parser", version = "0.7.0" }
logisheets_workbook = { path = "../workbook", features = [
    "gents",
], version = "0.7.0" }
logisheets_astchecker = { path = "./ast_checker", version = "0.7.0" }

gents = { workspace = true, optional = true }
gents_derives = { workspace = true, optional = true }

[features]
gents = ["dep:gents", "dep:gents_derives"]
sequencer = []
default = []
