[package]
name = "logisheets_controller"
version.workspace = true
license.workspace = true
authors.workspace = true
description = "the core of LogiSheets"
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
futures = "0.3.19"
colorsys = "0.6.7"
imbl = { workspace = true }
itertools = "0.10.5"
lazy_static = { workspace = true }
num = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2"
quick-xml = { workspace = true, features = ["serialize"] }
rand = "0.8.4"
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
statrs = "0.16.1"
unicode-segmentation = "1.10.1"
wildescape = { workspace = true }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

logisheets_base = { workspace = true}
logisheets_lexer = { workspace = true}
logisheets_lexer4fmt = { workspace = true }
logisheets_parser = { workspace = true}
logisheets_workbook = { workspace = true }
logisheets_astchecker = { workspace = true }

gents = { workspace = true }
gents_derives = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
xmlserde = { workspace = true }

[features]
sequencer = []
default = []
