[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "gents"
version = "0.1.0"
license = "MIT"
description = "generate typescript interfaces from rust code"
repository = "https://github.com/proclml/LogiSheets"

[dependencies]
gents_derives = {version = "0.1.0", path = "./derives"}