[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "logiscript"
version = "0.1.0"
description = "A simple script for building and testing LogiSheets"
license = "MIT"

[dependencies]
pest = "2.7.0"
pest_derive = "2.5.6"

logisheets_controller = {version = "*", path = "../controller"}
