[package]
name = "logiscript"
authors.workspace = true
edition.workspace = true
version = "0.1.0"
description = "A simple script for building and testing LogiSheets"
license.workspace = true

[dependencies]
pest = { workspace = true }
pest_derive = { workspace = true }

logisheets_controller = { workspace = true }
