[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "logisheets_sequencer"
version = "0.1.0"
description = "A server that provides LogiSheets with the ability of users' online editting"
license = "MIT"

[dependencies]
async-channel = "1.9.0"
async-trait = "0.1.52"
ezsockets = {version = "0.5.1"}
serde = {version = "1.0"}
serde_json = {version = "1.0"}
tokio = {version = "1.33"}

logisheets_controller = {version = "*", path = "../controller", features = ["sequencer"]}

gents = {version = "0.6.0", optional = true}
gents_derives = {version = "0.6.0", optional = true}

[features]
gents = ["dep:gents", "dep:gents_derives", "logisheets_controller/gents"]
