[package]
name = "logisheets_sequencer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "A server that provides LogiSheets with the ability of users' online editting"
license.workspace = true

[dependencies]
async-channel = "1.9.0"
async-trait = "0.1.52"
ezsockets = { version = "0.5.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.33" }

logisheets_controller = { workspace = true, features = ["sequencer"] }

gents = { workspace = true }
gents_derives = { workspace = true }
