[package]
name = "logisheets_server_types"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
logisheets_controller = { workspace = true }
gents = { workspace = true }
gents_derives = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
