[package]
name = "logisheets_workbook"
description = "Tools for LogiSheets to unarchive and write .xlsx file"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = { version = "0.6.0", default-features = false, features = ["deflate"] }
gents = { workspace = true }
gents_derives = { workspace = true }
xmlserde = { workspace = true }
xmlserde_derives = { workspace = true }

logisheets_workbook_derives = { workspace = true }

[dev-dependencies]
xmldiff = { workspace = true }
