[package]
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
edition = "2018"
name = "xmlserde"
version = "0.3.0"
license = "MIT"
description = "read and write .xlsx files"
repository = "https://github.com/proclml/LogiSheets/crates/xmlserde"

[dependencies]
convert_case = "0.4.0"
linked-hash-map = {version = "0.5.3", features = ["serde_impl"]}
paste = "1.0.5"
quick-xml = {version = "0.22.0", features = ["serialize"]}
regex = "1"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.59"
serde_repr = "0.1"
thiserror = "1.0.24"
logisheets_derives = {path = "./derives", version = "0.3.0"}
ts-rs = "6.1.2"
