[package]
name = "logisheets-zk-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and serialization for LogiSheets ZK proving"

[dependencies]
serde.workspace = true
hashbrown.workspace = true

[features]
default = ["std"]
std = ["serde/std", "hashbrown/default"]
guest = []  # enables no_std / alloc mode for RiscZero guest
