[package]
name = "logisheets_astchecker"
version = "0.3.0"
edition = "2018"
description = "validate the arguments in ast"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"

[dependencies]
logisheets_parser = {version = "0.3.0", path = "../parser"}
logisheets_base = {version = "0.3.0", path = "../base"}