[package]
name = "logisheets_base"
version = "0.5.0"
description = "some basic definitions for LogiSheets"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4.19"
futures = "0.3.19"
im = "15.0.0"
serde = {version = "1.0.125", features = ["derive"]}
thiserror = "1.0.48"

logisheets_workbook = {version = "0.5.0", path = "../../workbook"}

gents = {version = "0.8.0", optional = true}
gents_derives = {version = "0.8.0", optional = true}

[features]
gents = ["dep:gents", "dep:gents_derives"]
