[package]
name = "logisheets_base"
description = "some basic definitions for LogiSheets"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
im = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

gents = { workspace = true, optional = true }
gents_derives = { workspace = true, optional = true }

logisheets_workbook = { workspace = true }

[features]
gents = ["dep:gents", "dep:gents_derives"]
