[package]
name = "logisheets_base"
description = "some basic definitions for LogiSheets"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
futures = { workspace = true }
imbl = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

gents = { workspace = true }
gents_derives = { workspace = true }

logisheets_workbook = { workspace = true }
