[package]
name = "parser"
version = "0.1.1"
edition = "2018"
description = "the parser of excel formula"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
chrono = "0.4.19"
regex = "1"
lexer = {version = "0.1.0", path = "../lexer"}
controller_base = {version = "0.1.0", path = "../base"}
