[package]
name = "logisheets_parser"
description = "the parser of excel formula"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
lazy_static = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

logisheets_lexer = { workspace = true }
logisheets_base = { workspace = true }
