[package]
authors.workspace = true
edition.workspace = true
name = "logisheets_wasm_server"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
singlyton = "4.1.1"
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
web-sys = { version = "0.3.56", features = ["console"] }
# Specify the feature of the crate used in `logisheets_controller`.
getrandom = { workspace = true, features = ["js"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.5"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

logisheets_controller = { workspace = true, features = ["gents"] }
logisheets_base = { workspace = true }
logisheets_workbook = { workspace = true }

xmlserde = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.30"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# `wasm-opt` is on by default in for the release profile, but it can be
# disabled by setting it to `false`
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
