[package]
name = "logisheets_derives"
version = "0.2.1"
description = "macros that help LogiSheets serde the xml files"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.86", features = ["full"]}
quote = "1.0.15"
paste = "1.0.5"
proc-macro2 = "1.0.36"
