[package]
name = "logisheets_workbook_derives"
version = "0.3.0"
description = "macros that help LogiSheets serde the xml files"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.86", features = ["full"]}
quote = "1.0.15"
paste = "1.0.5"
proc-macro2 = "1.0.36"
